--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@
 hs_err_pid*
 /Clase01/VentaApp/nbproject/private/
 /Clase01/VentaApp/build/
+/Clase02/AprendiendoJava/nbproject/private/
+/Clase02/AprendiendoJava/build/
+/Clase02/PagoApp/nbproject/private/
+/Clase02/PagoApp/build/
