--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ hs_err_pid*
 /Clase02/AprendiendoJava/build/
 /Clase02/PagoApp/nbproject/private/
 /Clase02/PagoApp/build/
+/Clase03/AprendiendoJava/nbproject/private/
+/Clase03/AprendiendoJava/build/
+/Clase03/MiLibreria/nbproject/private/
+/Clase03/MiLibreria/build/
