--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ hs_err_pid*
 /Clase03/AprendiendoJava/build/
 /Clase03/MiLibreria/nbproject/private/
 /Clase03/MiLibreria/build/
+/Proyectos/Piscoya/exfinal/ExFinal/build/
+/Proyectos/Piscoya/exfinal/ExFinal/nbproject/private/
+/Proyectos/Piscoya/exfinal/build/
+/Proyectos/Piscoya/exfinal/dist/
+/Proyectos/Piscoya/exfinal/nbproject/private/
+/Proyectos/Flores/Interfaz/build/
+/Proyectos/Flores/Interfaz/nbproject/private/
